@@ -57,7 +57,6 @@ class TestUntestedModules(unittest.TestCase):
             import pstats
             import py_compile
             import rlcompleter
-            import sched
             import sndhdr
             import symbol
             import tabnanny
